# pybuildingcluster

./: .gitignore  .readthedocs.yaml  .releaserc.yml  AUTHORS.rst  CONTRIBUTING.srt  EPC_synthetic.py  Makefile  Pipfile  README.md  release.yml  requirements.txt  scenario_analysis_report.html  setup.py  tox.ini
data/clusters/: cluster_0.csv  cluster_1.csv  clustering_model.pkl  data_with_clusters.csv
docs/: .readhthedocs.yaml  CHANGELOG.rst  Makefile  README.rst  make.bat  pyproject.toml  requirements.txt
docs/examples/: gallery_header.md
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/_static/css/: custum.css
docs/source/api/: index.rst
docs/source/examples/: GALLERY_HEADER.rst  plot_basic_clustering.py
docs/source/tutorials/: index.rst
examples/: Example.py  GALLERY_HEADER.rst  generate_scenario.py
examples/example_results/: cluster_0.csv  cluster_1.csv  cluster_2.csv  cluster_3.csv  clustering_model.pkl  data_with_clusters.csv  list_dict_scenarios.csv  models_summary.pkl  scenario_analysis_report.html
examples/example_results/cluster_0/: best_model.pkl  metadata.pkl
examples/example_results/cluster_1/: best_model.pkl  metadata.pkl
examples/report/: scenario_analysis_report.html
htmlcov/: index.html  src_geoclustering_sensitivity___init___py.html  src_geoclustering_sensitivity_cli_py.html  src_geoclustering_sensitivity_core_clustering_py.html  src_geoclustering_sensitivity_core_optimization_py.html  src_geoclustering_sensitivity_core_regression_py.html  src_geoclustering_sensitivity_core_sensitivity_py.html  src_geoclustering_sensitivity_data___init___py.html  src_geoclustering_sensitivity_data_loader_py.html  src_geoclustering_sensitivity_utils___init___py.html  src_geoclustering_sensitivity_utils_config_py.html  src_geoclustering_sensitivity_utils_metrics_py.html  src_geoclustering_sensitivity_utils_plotting_py.html  status.json
models/: anti_overfit_summary.pkl
models/cluster_1/: best_model.pkl  metadata.pkl
results/: sensitivity_analysis_report.txt  sensitivity_analysis_results.pkl
src/: constants.py
src/pybuildingcluster/: __init__.py
src/pybuildingcluster.egg-info/: PKG-INFO  SOURCES.txt
src/pybuildingcluster/config/: default_confing.yaml
src/pybuildingcluster/core/: clustering.py  regression.py  sensitivity.py
src/pybuildingcluster/data/: clustering.csv  synthetic_epc_cleaned.csv
